Fixed volunteers responsiveness on mobile

--- a/client/src/styles/Volunteers.css
+++ b/client/src/styles/Volunteers.css
@@ -18,6 +18,10 @@
   border-radius: 10px;
 }
 
+.mobile-volunteers-image {
+  width: 80vw !important;
+}
+
 .volunteers-paragraph {
   background-color: rgb(196, 255, 178);
   padding: 1rem;
